# AquaNutriOpt-II

./: .gitignore  AquaNutriOpt.py  BMP_Tech.csv  GenInputMO.py  GenInputSO.py  LICENSE  Net_Data.csv  README.md  SWAT_Network_Automation_MO.py  SWAT_Network_Automation_TN.py  SWAT_Network_Automation_TP.py  WAM_Network_Automation_MO.py  WAM_Network_Automation_TN.py  WAM_Network_Automation_TP.py  network-error-finder.py  pyproject.toml  runAquaNutriOptV2.py  setup.py
AquaNutriOpt/: AquaNutriOpt.py  BMP_selection_code.py  GenInputMO.py  GenInputSO.py  Readme.md  SWAT_Network_Automation_MO.py  SWAT_Network_Automation_TN.py  SWAT_Network_Automation_TP.py  SWAT_Opt_Visualization.py  SWAT_utils.py  WAM_Model_Builder.py  WAM_Network_Automation_MO.py  WAM_Network_Automation_TN.py  WAM_Network_Automation_TP.py  WAM_Opt_Visualization.py  __init__.py  runAquaNutriOptV2.py  utils.py
