[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AquaNutriOpt"
version = "2.2.0"
description = "Finds the optimal placement of BMPs and Technologies in a network in order to reduce the nutrient loadings at the lake with multiple objectives taking different year nutrient loadings in consideration"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Ashim Khanal", email = "ashimkhanal18@gmail.com"},
]
requires-python = ">=3.6"

dependencies = [
    "numpy<2",
    "pandas==2.2.3",
    "pulp==2.9.0",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]

keywords = ["Optimization", "Environment", "Best Management Practices", "Aqua", "Technologies", "Nutrient Load Reduction", "environemnt protection", "Engineering", "Environmental Modeling", "Environmental Software"]

[project.urls]
Repository = "https://github.com/Ashim-Khanal/AquaNutriOpt"
